syntax = "proto3";

package registrygrpc;

message File {
    string name = 2;
    bytes data = 3;
}

message SaveFilesRequest {
    string cluster = 1;
    string channel = 2;
    repeated File files = 3;
}

message SaveFilesReply {
}

message GetFilesRequest {
    string cluster = 1;
    string channel = 2;
}

message GetFilesReply {
    repeated File files = 1;
}

message SetMessageRequest {
    string cluster = 1;
    string channel = 2;
    string name = 3;
}

message SetMessageReply {
}

message GetMessageRequest {
    string cluster = 1;
    string channel = 2;
}

message GetMessageReply {
    string name = 1;
}

message GetChannelDataRequest{
    string cluster = 1;
    string channel = 2;
}

message GetChannelDataReply{
    string cluster = 1;
    string channel = 3;
    string message = 4;
    repeated File files = 5;
}

message SetChannelDataRequest{
    string cluster = 1;
    string channel = 3;
    string message = 4;
    repeated File files = 5;
}

message SetChannelDataReply{
}

service ProtoRegistry {
    rpc SaveFiles(SaveFilesRequest) returns(SaveFilesReply) {};
    rpc GetFiles(GetFilesRequest) returns(GetFilesReply) {};
    rpc SetMessage(SetMessageRequest) returns(SetMessageReply) {};
    rpc GetMessage(GetMessageRequest) returns(GetMessageReply) {};
    rpc GetChannelData(GetChannelDataRequest) returns(GetChannelDataReply) {};
    rpc SetChannelData(SetChannelDataRequest) returns(SetChannelDataReply) {};
}